# fennec

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: entrypoint.sh
docs/: competitive-research.md
docs/superpowers/plans/: 2026-04-03-fennec-plan-1-foundation.md  2026-04-04-fennec-plan-2-full-agent.md  2026-04-04-fennec-plan-3-channels-gateway.md
docs/superpowers/specs/: 2026-04-03-ai-agent-design.md
scripts/: install.sh  update.sh
skills/: 1password.md  README.md  apple-calendar.md  apple-mail.md  apple-notes.md  apple-reminders.md  arxiv.md  asana.md  audio-edit.md  bitwarden.md  bluesky.md  canvas.md  clickup.md  coding-agent.md  contacts.md  crates-io.md  crossref.md  currency.md  diagramming.md  docker-hub.md  file-compression.md  geocoding.md  gifs.md  github.md  go-modules.md  google-tasks.md  google-workspace.md  healthcheck.md  home-assistant.md  image-ops.md  imessage.md  jira.md  linear.md  mac-shortcuts.md  mastodon.md  nano-pdf.md  notion.md  npm-registry.md  obsidian.md  openai-whisper.md  (+36 more)
src/: auth_env.rs  lib.rs  main.rs
src/agent/: agent.rs  attachment.rs  callbacks.rs  compressor.rs  context.rs  delegation.rs  loop_.rs  mod.rs  model_metadata.rs  pricing.rs  scrub.rs  subagent.rs  thinking.rs  title_generator.rs
src/auth/: anthropic_oauth.rs  github_copilot.rs  google_oauth.rs  mod.rs
src/bus/: events.rs  mod.rs  turn_context.rs
src/channels/: cli.rs  discord.rs  email.rs  manager.rs  matrix.rs  matrix_e2ee.rs  mod.rs  signal.rs  slack.rs  telegram.rs  traits.rs  webhook.rs  whatsapp.rs
src/channels/openai_compat/: auth.rs  handlers.rs  mod.rs  response_store.rs  session_id.rs  types.rs
src/collective/: cache.rs  mock.rs  mod.rs  plurum.rs  scrub.rs  search.rs  traits.rs
src/config/: mod.rs  schema.rs
src/cron/: jobs.rs  mod.rs  output.rs  script.rs
src/doctor/: mod.rs
src/gateway/: auth.rs  mod.rs  routes.rs
src/heartbeat/: mod.rs
src/mcp/: client.rs  mod.rs  transport.rs  types.rs
src/mcp/serve/: event_bridge.rs  mod.rs  state.rs  tools.rs  transport.rs
src/memory/: consolidation.rs  decay.rs  embedding.rs  experience.rs  fts.rs  mod.rs  snapshot.rs  sqlite.rs  traits.rs  vector.rs
src/onboard/: frame.rs  mod.rs  wizard.rs
src/plugins/: cli.rs  context.rs  demo.rs  hooks.rs  manifest.rs  memory_manager.rs  memory_provider.rs  mod.rs  registry.rs  traits.rs
src/plugins/wasm/: host.rs  loader.rs  memory_provider.rs  mod.rs  runtime.rs  tool.rs
src/providers/: anthropic.rs  auxiliary.rs  aws_sigv4.rs  azure.rs  bedrock.rs  codex_responses.rs  copilot.rs  error_classifier.rs  gemini.rs  gemini_cloudcode.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  reliable.rs  router.rs  sse.rs  traits.rs
src/security/: ct.rs  fs.rs  mod.rs  pairing.rs  path_sandbox.rs  prompt_guard.rs  secrets.rs  url_guard.rs
src/sessions/: mod.rs  store.rs
src/skills/: archive.rs  format.rs  fuzzy.rs  lifecycle.rs  loader.rs  manage.rs  manifest.rs  mod.rs  sync.rs  usage.rs
src/skills/curator/: mod.rs  prompt.rs  report.rs  runner.rs  scheduler.rs  state.rs  tool_loop.rs  tools.rs
src/skills/guard/: mod.rs  patterns.rs  policy.rs  structural.rs  unicode.rs
src/skills/test_fixtures/: alpha.md  beta.md  gamma.md
src/tools/: ask_user_tool.rs  browser_tool.rs  calc_tool.rs  claude_code_cli_tool.rs  code_exec_tool.rs  collective_tools.rs  cron_tool.rs  delegate_tool.rs  files.rs  git_tool.rs  http.rs  http_request_tool.rs  image_gen_tool.rs  image_info_tool.rs  mcp_tools.rs  memory_tools.rs  mod.rs  pdf_read_tool.rs  proc_util.rs  screenshot_tool.rs  send_message_tool.rs  session_tools.rs  shell.rs  skill_manage_tool.rs  skills_tool.rs  todo_tool.rs  traits.rs  vision_tool.rs  voice_tool.rs  weather_tool.rs  web.rs
src/tui/: agents_overlay.rs  app.rs  callbacks.rs  clipboard.rs  editor.rs  layout.rs  log_ring.rs  mod.rs  modal.rs  skin.rs  spawn_tree.rs  theme.rs  usage_panel.rs  voice.rs
src/tui/commands/: builtin.rs  mod.rs
tests/: agent_collective_test.rs  agent_test.rs  bus_test.rs  channel_manager_test.rs  collective_cache_test.rs  collective_search_test.rs  collective_test.rs  collective_tools_test.rs  compressor_test.rs  config_test.rs  consolidation_test.rs  cron_test.rs  decay_test.rs  discord_test.rs  embedding_test.rs  experience_test.rs  gateway_test.rs  loop_detection_test.rs  memory_test.rs  memory_trait_test.rs  pairing_test.rs  prompt_guard_test.rs  provider_test.rs  reliable_provider_test.rs  scrub_experience_test.rs  scrub_test.rs  secrets_test.rs  slack_test.rs  snapshot_test.rs  telegram_test.rs  tools_test.rs  vector_test.rs  web_tools_test.rs
wit/: plugin.wit
