[package]
name = "fennec"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "The fastest personal AI agent with collective intelligence"
license = "MIT"

[[bin]]
name = "fennec"
path = "src/main.rs"

[lib]
name = "fennec"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking", "multipart"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chacha20poly1305 = "0.10"
async-trait = "0.1"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v4"] }
sha2 = "0.10"
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6.0"
hex = "0.4"
toml = "0.8"
glob = "0.3"
dialoguer = "0.12"
console = "0.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
native-tls = "0.2"
base64 = "0.22"
pdf-extract = "0.7"
imagesize = "0.14"
subtle = "2.6"
hmac = "0.12"
url = "2.5"
# Maintained fork of the (now unmaintained) serde_yaml crate. Used for
# parsing YAML frontmatter in skill files.
serde_yaml_ng = "0.10"
# Compile-time plugin registration. Bundled plugins (in src/plugins/)
# call `inventory::submit!` at module scope to register themselves; the
# loader iterates `inventory::iter::<PluginEntry>()` at startup. This is
# the same mechanism `clap`, `rkyv`, and many other crates use.
inventory = "0.3"

[dev-dependencies]
tempfile = "3.15"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
