[package]
name = "fennec"
version = "0.1.0"
edition = "2024"
# Default builds compile on Rust 1.87. Enabling the optional
# `matrix-e2ee` feature pulls matrix-sdk-crypto into the dep graph,
# which wants Rust 1.88+. Without the feature the floor is 1.87.
rust-version = "1.87"
description = "The fastest personal AI agent with collective intelligence"
license = "MIT"

[features]
default = []
# End-to-end encryption support for the Matrix channel. Layers
# matrix-sdk-crypto's OlmMachine (pure-Rust Olm/Megolm via
# vodozemac, audited) and matrix-sdk-sqlite's SqliteCryptoStore
# on top of the existing E-4-1 channel. Without this feature the
# Matrix channel works fine in unencrypted rooms; with it on,
# Fennec reads and writes Megolm-encrypted messages, manages
# device + cross-signing keys via a local SQLite store, and runs
# the standard Matrix outgoing-request loop (keys/upload,
# keys/query, keys/claim, sendToDevice, signatures/upload).
matrix-e2ee = [
    "dep:matrix-sdk-crypto",
    "dep:matrix-sdk-sqlite",
    "dep:ruma",
]

[[bin]]
name = "fennec"
path = "src/main.rs"

[lib]
name = "fennec"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "blocking", "multipart"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chacha20poly1305 = "0.10"
zeroize = "1"
fs2 = "0.4"
async-trait = "0.1"
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.22", features = ["v4"] }
sha2 = "0.10"
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "timeout"] }
dirs = "6.0"
hex = "0.4"
toml = "0.8"
glob = "0.3"
dialoguer = "0.12"
console = "0.15"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
native-tls = "0.2"
base64 = "0.22"
pdf-extract = "0.7"
imagesize = "0.14"
subtle = "2.6"
hmac = "0.12"
url = "2.5"
# Async stream macro for the OpenAI-compat channel's SSE handler.
async-stream = "0.3"
# URL-encoding for Signal channel SSE listener path.
urlencoding = "2.1"
# Maintained fork of the (now unmaintained) serde_yaml crate. Used for
# parsing YAML frontmatter in skill files.
serde_yaml_ng = "0.10"
# Compile-time plugin registration.
inventory = "0.3"
# WASM plugin runtime.
wasmtime = "27"
wasmtime-wasi = "27"
# Embed bundled skills/ at compile time.
include_dir = "0.7"

# E2EE stack for the Matrix channel. All three are optional and
# pulled in only when the `matrix-e2ee` feature is on — base
# builds stay slim. matrix-sdk-crypto is the OlmMachine equivalent
# (pure Rust Olm/Megolm via vodozemac, audited). matrix-sdk-sqlite
# ships SqliteCryptoStore which persists Olm sessions, Megolm
# sessions, tracked-user state, and cross-signing keys across
# restarts. ruma supplies the typed Matrix protocol structs the
# OlmMachine API consumes.
matrix-sdk-crypto = { version = "0.16", optional = true, default-features = false }
matrix-sdk-sqlite = { version = "0.16", optional = true, default-features = false, features = ["crypto-store"] }
ruma = { version = "0.14", optional = true, default-features = false, features = ["client-api-c"] }

[dev-dependencies]
tempfile = "3.15"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
